# SlocVala

./: AUTHORS  CMakeLists.txt  INSTALL  Makefile  README.md  index.html  params.json  wscript
data/: CMakeLists.txt  slocvala.desktop
icons/: CMakeLists.txt
icons/src/: slocvala.pov
src/: CMakeLists.txt  REPORT.vala  SLOC.vala  Window.vala  aboutdialog.vala  main.vala  project.vala  reportSimple.vala  sloc.vala  slocMake.vala  slocV.vala  wscript
test/: SlocVala.txt  sloocount.txt  tally.txt
