#install(FILES 16/projekt.svg DESTINATION share/icons/hicolor/16x16/apps)
#install(FILES 24/projekt.svg DESTINATION share/icons/hicolor/24x24/apps)
#install(FILES 48/projekt.svg DESTINATION share/icons/hicolor/48x48/apps)
#install(FILES 64/projekt.svg DESTINATION share/icons/hicolor/64x64/apps)
#install(FILES 128/projekt.svg DESTINATION share/icons/hicolor/128x128/apps)


