install(FILES 16/slocvala.png DESTINATION /usr/share/icons/hicolor/16x16/apps)
install(FILES 22/slocvala.png DESTINATION /usr/share/icons/hicolor/22x22/apps)
install(FILES 24/slocvala.png DESTINATION /usr/share/icons/hicolor/24x24/apps)
install(FILES 48/slocvala.png DESTINATION /usr/share/icons/hicolor/48x48/apps)




